<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:background="#4CAF50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/im_setting"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                <TextView
                    android:layout_margin="@dimen/dimen_setting"
                    android:textSize="20sp"
                    android:id="@+id/title_setting"
                    android:text="Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:background="@color/colorBGTab"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/colordata_usage"
            android:layout_margin="@dimen/dimen_data_usage"
            android:textSize="20sp"
            android:text="@string/tv_data_usage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_Data"
                android:layout_margin="@dimen/dimen_tv_download"
                android:textSize="20sp"
                android:textColor="@color/colorTextheader"
                android:maxLines="3"
                android:text="@string/tv_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/swich_one"
                android:layout_marginTop="@dimen/dimen_swich"
                android:paddingRight="@dimen/dimen_right"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:layout_margin="@dimen/magin_10"
            android:textSize="20sp"
            android:textColor="@color/colordata_usage"
            android:text="@string/tv_setting_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_Setting"
                android:layout_margin="@dimen/dimen_tv_download"
                android:textSize="20sp"
                android:textColor="@color/colorTextheader"
                android:maxLines="3"
                android:text="@string/tv_installer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/swich_two"
                android:layout_marginTop="@dimen/dimen_swich"
                android:paddingRight="@dimen/dimen_right"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:text="@string/tv_notiffication"
            android:layout_margin="@dimen/dimen_tv_download"
            android:textSize="22sp"
            android:textColor="@color/colordata_usage"
            android:maxLines="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_Notification"
                android:layout_margin="@dimen/dimen_tv_download"
                android:textSize="20sp"
                android:textColor="@color/colorTextheader"
                android:maxLines="3"
                android:text="@string/tv_pushNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/swich_three"
                android:layout_marginTop="@dimen/dimen_push_notification"
                android:paddingRight="@dimen/dimen_right"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>